--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,19 +4,20 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "name": "Chrome 调试",
+            // "url": "http://localhost:8080",
             "webRoot": "${workspaceFolder}",
             "file": "${workspaceFolder}/bin/index.html",
-            "runtimeArgs": [
-				"--allow-file-access-from-files",
-            ],
-            "sourceMaps": true,
-            "userDataDir": "${workspaceRoot}/.laya/chrome",
-			"fixedPort": false,
+            // "runtimeArgs": [
+			// 	"--allow-file-access-from-files",
+            // ],
+            // "sourceMaps": true,
+            "userDataDir": "${workspaceFolder}/.laya/chrome",
+			// "fixedPort": false,
             
         }
     ]
